src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --background: linear-gradient(to right, #eed991, #ccf7f4);;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  height: 100%;
  color: var(--foreground);
  background: var(--background);
  font-family: Arial, Helvetica, sans-serif;
}

input:-webkit-autofill, 
input:-webkit-autofill:hover, 
input:-webkit-autofill:focus, 
input:-webkit-autofill:active { 
  -webkit-box-shadow: 0 0 0 30px transparent inset !important; transition: background-color 5000s ease-in-out 0s; 
} 

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

@layer components {
  .sidebar-tooltip {
    @apply absolute w-auto p-2 m-2 min-w-max left-14
           rounded-lg shadow-md
           text-white bg-gray-900
           text-xs font-bold
           transition-all duration-100 scale-0 origin-left;
  }
}

